@@ -480,8 +480,8 @@ cgiRequestObj *msAllocCgiObj() {
   if(!request)
     return NULL;
 
-  request->ParamNames = NULL;
-  request->ParamValues = NULL;
+  request->ParamNames = (char **) msSmallMalloc(MS_DEFAULT_CGI_PARAMS*sizeof(char*));
+  request->ParamValues = (char **) msSmallMalloc(MS_DEFAULT_CGI_PARAMS*sizeof(char*));
   request->NumParams = 0;
   request->type = -1;
   request->contenttype = NULL;
